[metadata]
name = bobbey-reese-tools
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description =
    Provides functions and other stuff I keep reusing so I might as well make a package out of it.
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages =
    bobbeyreese

python_requires = >=3.10
install_requires =
    ordered-set>=4.0.2
    pytest>=6.2.4
