[metadata]
name = keyword-commands
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description =
    Provides a framework for parsing strings that contain either command paths or keyword arguments.
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages =
    keywordcommands

python_requires = >=3.10
install_requires =
    bobbey-reese-tools>=0.0.1

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.2.4
