[metadata]
name = service-control-everyaction-contacts
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = EveryAction contact database service for service-control
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    service-control>=0.0.1
    service-control-everyaction-cache>=0.0.1
    service-control-everyaction-contacts>=0.0.1
    everyaction-client>=0.2.9
    pymongo>=3.11.4

[options.packages.find]
where = src

[options.extras_require]
test =
    mongomock>=3.23.0
    pytest>=6.2.4
