[metadata]
name = service-control-everyaction-sync
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = EveryAction contact sync service for service-control
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    service-control>=0.0.1
    service-control-data>=0.0.1
    service-control-everyaction-contacts>=0.0.1
    everyaction-client>=0.2.9

[options.extras_require]
test =
    pytest>=6.2.4
[options.packages.find]
where = src