[metadata]
name = service-control-google
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = Google services for service-control
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    service-control>=0.0.1
    service-control-data>=0.0.1
    google-api-python-client>=2.6.0
    google-auth-httplib2>=0.1.0
    google-auth-oauthlib>=0.4.4

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.2.4