[metadata]
name = service-control-mongodb
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = MongoDB component for service-control
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    service-control>=0.0.1
    pymongo>=3.11.4

[options.packages.find]
where = src
