[metadata]
name = service-control-slack-bolt
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = Slack Bolt service for service-control
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    service-control>=0.0.1
    slack-bolt>=1.9.1
    slack-sdk>=3.11.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.2.4