[metadata]
name = service-control-slack-log
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = Service for service-control which exports a logger that sends messages to a configured Slack channel.
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    bobbey-reese-tools>=0.0.1
    service-control>=0.0.1
    slack-sdk>=3.11.2

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.2.4