[metadata]
name = service-control
version = 0.0.1
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = A framework for managing multiple arbitrary services in Python.
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:

python_requires = >=3.10
install_requires =
    bobbey-reese-tools>=0.0.1
    jsonschema>=3.2.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.2.4
